--- a/static/hugo-douban/styles/index.css
+++ b/static/hugo-douban/styles/index.css
@@ -16,8 +16,8 @@
 }
 
 .hexo-douban-active {
-    background: #657b83; 
-    color: #fff; 
+    /* background: #657b83; */
+    /* color: #fff; */
     color: #ff4081;
 }
 
@@ -26,6 +26,7 @@
     position: relative;
     clear: both;
     min-height: 170px;
+    height: 170px;
     padding: 10px 0;
     border-bottom: 1px #ddd solid;
 }
@@ -67,8 +68,8 @@
 }
 
 .hexo-douban-button:hover {
-    background: #657b83; 
-    color: #fff; 
+    /* background: #657b83; */
+    /* color: #fff; */
     color: #ff4081;
 }
 
