--- a/themes/stack/layouts/_default/single.html
+++ b/themes/stack/layouts/_default/single.html
@@ -43,9 +43,7 @@
     {{ if (.Scratch.Get "hasTOC") }}
         <aside class="sidebar right-sidebar sticky">
             <section class="widget archives">
-                <div class="widget-icon">
-                    {{ partial "helper/icon" "hash" }}
-                </div>
+                <div class="widget-icon"></div>
                 <h2 class="widget-title section-title">{{ T "article.tableOfContents" }}</h2>
                 
                 <div class="widget--toc">
