--- a/themes/hugo-tania/assets/sass/main.scss
+++ b/themes/hugo-tania/assets/sass/main.scss
@@ -18,6 +18,7 @@
 @import "components/search";
 
 @import "components/post";
+@import "components/post_reward";
 @import "components/comments";
 @import "components/highlight";
 @import "components/footnotes";
