完成打赏模块

--- a/themes/hugo-tania/layouts/partials/post-reward.html
+++ b/themes/hugo-tania/layouts/partials/post-reward.html
@@ -9,7 +9,7 @@
         <div node-type="cy-reward-code" class="cy-reward-code"> <img node-type="alipay-code" style="display: none;"
                 src="https://cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master//assets/images/alipay.jpg">
             <img node-type="weichat-code"
-                src="https://cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master//assets/images/alipay.jpg"
+                src="https://cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master//assets/images/wechat.png"
                 style="display: inline;"> </div>
         <div class="cy-reward-txt">扫码打赏，建议金额1-10元</div>
         <div node-type="platform-choice" class="platform-choice clearfix">
