打赏支持头像

--- a/themes/hugo-tania/layouts/partials/post-reward.html
+++ b/themes/hugo-tania/layouts/partials/post-reward.html
@@ -4,7 +4,7 @@
     </div>
     <div id="cy-reward-pop" class="cy-reward-pop">
         <div node-type="cy-close-btn" class="cy-close-btn"></div> <img class="cy-avatar"
-            src="https://cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master//assets/images/wechat.png">
+            src="{{ .Site.Params.avatar }}">
         <div class="cy-reward-title">感谢你的支持，我会继续努力！</div>
         <div node-type="cy-reward-code" class="cy-reward-code"> <img node-type="alipay-code" style="display: none;"
                 src="https://cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master//assets/images/alipay.jpg">
