--- a/themes/hugo-tania/layouts/_default/index.html
+++ b/themes/hugo-tania/layouts/_default/index.html
@@ -27,9 +27,11 @@
 </div>
 
 {{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
-{{ $projects := where .Site.RegularPages "Section" "projects" }}
 {{ $pages = .Paginate ($pages)  }}
 {{ $archivesPage := first 1 (where .Site.RegularPages "Layout" "eq" "archives") }}
+
+{{ $works := .Site.Data.portfolio.items }}
+{{ $worksPage := first 1 (where .Site.RegularPages "Layout" "eq" "works")}}
 
 <div class="container">
     <section>
@@ -53,21 +55,26 @@
             {{ end }}
         </div>
     </section>
-    {{ if gt (len $projects) 0}}
+    {{ if gt (len $works) 0}}
     <section>
-        <h2>最近项目</h2>
+        <h2>
+        最近项目
+        {{ range $worksPage }}
+            <a class="section-button" href="{{ .RelPermalink }}">浏览全部</a>
+        {{ end }}
+        </h2>
         <div class="projects">
-            {{ range $projects.ByWeight }}
+            {{ range first 3 (sort $works "date" "desc") }}
             <div class="project">
                 <div>
-                    <a href="{{ .Params.link }}" target="_blank" rel="noreferrer">
-                        <div class="icon">{{ .Params.icon }}</div>
-                        <h3>{{ .Title }}</h3>
+                    <a href="{{ .link }}" target="_blank" rel="noreferrer">
+                        <div class="icon">{{ .icon }}</div>
+                        <h3>{{ .title }}</h3>
                     </a>
-                    <div class="description">{{ .Params.description }}</div>
+                    <div class="description">{{ substr .description  0 50 }}...</div>
                 </div>
                 <div class="flex">
-                    <a href="{{ .Params.repo }}" class="button" target="_blank" rel="noreferrer">浏览</a>
+                    <a href="{{ .link }}" class="button" target="_blank" rel="noreferrer">浏览</a>
                 </div>
             </div>
             {{ end }}
