完成实验室页面

--- a/themes/hugo-tania/assets/sass/main.scss
+++ b/themes/hugo-tania/assets/sass/main.scss
@@ -19,6 +19,7 @@
 
 @import "components/post";
 @import "components/post_reward";
+@import "components/works";
 @import "components/comments";
 @import "components/highlight";
 @import "components/footnotes";
