--- a/themes/hugo-tania/layouts/_default/works.html
+++ b/themes/hugo-tania/layouts/_default/works.html
@@ -9,12 +9,9 @@
 
 <section>
     <div class="container">
-        {{ partial "works/works.html" }}
+        {{ $works := .Site.Data.portfolio.items }}
+        {{ partial "works/works.html" $works }}
     </div>
 </section>
-
-{{- $opts := dict "minify" hugo.IsProduction -}}
-{{ $search := resources.Get "ts/search.ts" | js.Build $opts | fingerprint }}
-<script async src="{{ $search.RelPermalink }}"></script>
 
 {{ end }}
