--- a/themes/hugo-tania/layouts/partials/head/custom.html
+++ b/themes/hugo-tania/layouts/partials/head/custom.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@4.3.2/dist/css/swiper.min.css">
