--- a/themes/hugo-tania/layouts/partials/series/index.html
+++ b/themes/hugo-tania/layouts/partials/series/index.html
@@ -1,5 +1,5 @@
 <section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@4.3.2/dist/js/swiper.min.js"></script>
     <style>
         .swiper-container {
             width: 100%;
