调整项目列表样式，支持移动设备

--- a/themes/hugo-tania/assets/sass/main.scss
+++ b/themes/hugo-tania/assets/sass/main.scss
@@ -20,6 +20,7 @@
 @import "components/post";
 @import "components/post_reward";
 @import "components/works";
+@import "components/series";
 @import "components/comments";
 @import "components/highlight";
 @import "components/footnotes";
