--- a/themes/hugo-tania/assets/sass/components/_projects.scss
+++ b/themes/hugo-tania/assets/sass/components/_projects.scss
@@ -57,3 +57,11 @@
         }
     }
 }
+
+@media screen and (max-width:800px) {
+    a {
+        &.button {
+            display: none;
+        }
+    }
+}
