--- a/themes/hugo-tania/layouts/partials/head/custom.html
+++ b/themes/hugo-tania/layouts/partials/head/custom.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@3.4.2/dist/css/swiper.min.css">
+<script src="https://cdn.jsdelivr.net/npm/swiper@3.4.2/dist/js/swiper.min.js"></script>
