--- a/themes/hugo-tania/assets/sass/components/_footer.scss
+++ b/themes/hugo-tania/assets/sass/components/_footer.scss
@@ -3,7 +3,7 @@
 .footer {
     padding: 2rem 0;
 
-    >.flex {
+    > .flex {
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -21,7 +21,7 @@
         font-size: 1rem;
         border: 1px solid transparent;
         padding: 0.5rem;
-        margin: 0 0.5rem;
+        margin: 0 0.25rem;
         color: var(--light-font-color);
 
         &:hover {
@@ -50,16 +50,25 @@
     padding: 1rem 0;
 }
 
+.footer {
+    .footer-copyright {
+        a {
+            padding: 0rem;
+            margin: 0 0rem;
+        }
+    }
+}
+
 @media screen and (min-width: 800px) {
     .footer {
-        >.flex {
+        > .flex {
             align-items: flex-start;
             margin-left: -1.5rem;
             margin-right: -1.5rem;
         }
 
         a {
-            padding: 0.75rem;
+            padding: 0.5rem;
 
             &.img {
                 padding: 0 0.5rem;
@@ -67,7 +76,6 @@
             }
         }
     }
-
 }
 
 @media print {
