--- a/themes/hugo-tania/layouts/partials/head/head.html
+++ b/themes/hugo-tania/layouts/partials/head/head.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="theme-color" content="dark">
+    {{ hugo.Generator }}
     <title>{{with.Title}}{{.}} | {{end}}{{.Site.Title}}</title>
 
     {{ template "_internal/google_analytics.html" . }}
