增加社交媒体图标 & 修改样式

--- a/themes/hugo-tania/layouts/_default/index.html
+++ b/themes/hugo-tania/layouts/_default/index.html
@@ -2,6 +2,9 @@
 
 <div class="container">
     <section class="my">
+        <div class="avatar">
+            <img src="{{ .Site.Params.avatar }}"/>
+        </div>
         <div class="content">
             {{ with .Content }}
             {{ . }}
