页脚自适应居中

--- a/themes/hugo-tania/assets/sass/components/_footer.scss
+++ b/themes/hugo-tania/assets/sass/components/_footer.scss
@@ -52,6 +52,8 @@
 
 .footer {
     .footer-copyright {
+
+        text-align: center;
         a {
             padding: 0rem;
             margin: 0 0rem;
