文章日期显示格式支持配置

--- a/themes/hugo-tania/layouts/_default/archives.html
+++ b/themes/hugo-tania/layouts/_default/archives.html
@@ -32,7 +32,7 @@
                     <div class="post">
                         <a href="{{ .RelPermalink }}">
                             <div class="post-row">
-                                <time>{{ .Date.Format "Jan 02" }}</time>
+                                <time>{{ .Date.Format .Site.Params.dateFormat }}</time>
                                 <h3>{{ .Title }}</h3>
                             </div>
                         </a>
