--- a/themes/hugo-tania/layouts/_default/single.html
+++ b/themes/hugo-tania/layouts/_default/single.html
@@ -11,7 +11,7 @@
                             {{ if eq $author nil }}
                               {{ $author = .Site.Params.author }}
                             {{ end }}
-                            By {{ $author  }} | <time>{{ .Date.Format "January 02, 2006" }}</time>
+                            By {{ $author  }} | <time>{{ .Date.Format .Site.Params.dateFormat }}</time>
                             | {{ .ReadingTime }} minutes
                         </div>
                         <div class="tags">
