--- a/themes/hugo-tania/layouts/_default/terms.html
+++ b/themes/hugo-tania/layouts/_default/terms.html
@@ -5,7 +5,11 @@
 
 <header>
     <div class="container">
-        <h1>{{ .Title }}</h1>
+    {{ if eq .Title "Categories"}}
+        <h1>分类</h1>
+    {{ else if eq .Title "Tags" }}
+        <h1>标签</h1>
+    {{ end }}
     </div>
 </header>
 
