增加友链页面

--- a/themes/hugo-tania/assets/sass/main.scss
+++ b/themes/hugo-tania/assets/sass/main.scss
@@ -21,7 +21,7 @@
 @import "components/post_reward";
 @import "components/works";
 @import "components/series";
-@import "components/comments";
+@import "components/friends";
 @import "components/highlight";
 @import "components/footnotes";
 @import "components/suggested";
