--- a/themes/hugo-tania/assets/sass/base/_variables.scss
+++ b/themes/hugo-tania/assets/sass/base/_variables.scss
@@ -18,6 +18,7 @@
     --transparent-text: rgba(0, 0, 0, 0.7);
     --transparent-bg: rgba(0, 0, 0, 0.05);
     --light-transparent-bg: rgba(255, 255, 255, 0.1);
+    --color-contrast-low: hsl(240, 1%, 83%)
 }
 
 :root {
