--- a/themes/hugo-tania/assets/sass/components/_works.scss
+++ b/themes/hugo-tania/assets/sass/components/_works.scss
@@ -24,7 +24,7 @@ section .works-area {
 }
 .works-area .works-item {
     border-radius: 2px;
-    border: 1px solid #eee8d5;
+    border: 1px solid #eee;
     margin-bottom: 50px;
 }
 .works-item-img img {
