集成豆瓣插件

--- a/themes/hugo-tania/assets/sass/main.scss
+++ b/themes/hugo-tania/assets/sass/main.scss
@@ -28,5 +28,6 @@
 @import "components/projects";
 @import "components/terms";
 @import "components/pagination";
+@import "components/douban";
 
 @import "base/dark";
