--- a/themes/hugo-tania/layouts/_default/books.html
+++ b/themes/hugo-tania/layouts/_default/books.html
@@ -10,41 +10,34 @@
 <section>
     {{ $doubanBooks := $.Site.Data.douban.books }}
     <div class="container">
-        <div class="hexo-douban-tabs">
-            <a class="hexo-douban-tab" id="hexo-douban-tab1" href="javascript:;" rel="external">
-                在读({{ len $doubanBooks.reading }})
-            </a>
-            <a class="hexo-douban-tab" id="hexo-douban-tab2" href="javascript:;" rel="external">
-                想读({{ len $doubanBooks.wishing }})
-            </a>
-            <a class="hexo-douban-tab" id="hexo-douban-tab3" href="javascript:;" rel="external">
-                已读({{ len $doubanBooks.readed }})
+        <div class="bmdb-list">
+            <ul class="bmdb-ul">
+                {{ range $doubanBooks.readed }}
+                <li class="bmdb-li">
+                    <a href="{{ .alt }}" class="bmdb-link" target="_blank">
+                        <div class="bmdb-cover">
+                            <img class="bmdb-cover-image" src="{{ .image }}" alt="{{ .title }}" width="126.45"
+                                height="220" referrerPolicy="no-referrer">
+                        </div>
+                        <div class="bmdb-info">
+                            <div class="bmdb-title">{{ .title }}</div>
+                            <div class="bmdb-rank">
+                                <span class="bmdb-rank-span bmdb-stars">
+                                    <span class="bmdb-star bmdb-star-full"></span>
+                                    <span class="bmdb-star bmdb-star-full"></span>
+                                    <span class="bmdb-star bmdb-star-full"></span>
+                                    <span class="bmdb-star bmdb-star-full"></span>
+                                    <span class="bmdb-star bmdb-star-gray"></span>
+                                </span>
+                                <span class="bmdb-rank-span">{{ .recommend }}</span>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                {{ end }}
+            </ul>
         </div>
-        <div>
-            <div>
-                <div id="hexo-douban-item1">
-                    {{ range $doubanBooks.reading }}
-                    {{ partial "douban/book/bookReading" . }}
-                    {{ end }}
-                    {{ partial "douban/pagination" }}
-                </div>
-                <div id="hexo-douban-item2">
-                    {{ range $doubanBooks.wishing }}
-                    {{ partial "douban/book/bookWish" . }}
-                    {{ end }}
-                    {{ partial "douban/pagination"}}
-                </div>
-                <div id="hexo-douban-item3">
-                    {{ range $doubanBooks.readed }}
-                    {{ partial "douban/book/bookRead" . }}
-                    {{ end }}
-                    {{ partial "douban/pagination"}}
-                </div>
-            </div>
-
-            <script src="/hugo-douban/scripts/index.js"></script>
-            <script src="/hugo-douban/scripts/pagination.js" type="text/javascript"></script>
-        </div>
+    </div>
 </section>
 
 {{ end }}
