--- a/themes/hugo-tania/layouts/_default/movies.html
+++ b/themes/hugo-tania/layouts/_default/movies.html
@@ -1,4 +1,4 @@
-{{ define "main" }}
+﻿{{ define "main" }}
 
 <header>
     <div class="container">
@@ -10,36 +10,34 @@
 <section>
     {{ $doubanMovies := $.Site.Data.douban.movies }}
     <div class="container">
-        <div class="hexo-douban-tabs">
-            <a class="hexo-douban-tab" id="hexo-douban-tab1" href="javascript:;" rel="external">在看({{ len $doubanMovies.watching }})</a>
-            <a class="hexo-douban-tab" id="hexo-douban-tab2" href="javascript:;" rel="external">想看({{ len $doubanMovies.wishing }})</a>
-            <a class="hexo-douban-tab" id="hexo-douban-tab3" href="javascript:;" rel="external">已看({{ len $doubanMovies.watched }})</a>
+        <div class="bmdb-list">
+            <ul class="bmdb-ul">
+                {{ range $doubanMovies.watched }}
+                <li class="bmdb-li">
+                    <a href="{{ .alt }}" class="bmdb-link" target="_blank">
+                        <div class="bmdb-cover">
+                            <img class="bmdb-cover-image" src="{{ .image }}" alt="{{ .title }}" width="126.45"
+                                height="220" referrerPolicy="no-referrer">
+                        </div>
+                        <div class="bmdb-info">
+                            <div class="bmdb-title">{{ .title }}</div>
+                            <div class="bmdb-rank">
+                                <span class="bmdb-rank-span bmdb-stars">
+                                    <span class="bmdb-star bmdb-star-full"></span>
+                                    <span class="bmdb-star bmdb-star-full"></span>
+                                    <span class="bmdb-star bmdb-star-full"></span>
+                                    <span class="bmdb-star bmdb-star-full"></span>
+                                    <span class="bmdb-star bmdb-star-gray"></span>
+                                </span>
+                                <span class="bmdb-rank-span">{{ .recommend }}</span>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                {{ end }}
+            </ul>
         </div>
-        <div>
-            <div>
-                <div id="hexo-douban-item1">
-                    {{ range $doubanMovies.watching }}
-                    {{ partial "douban/movie/movieWatching" . }}
-                    {{ end }}
-                    {{ partial "douban/pagination" }}
-                </div>
-                <div id="hexo-douban-item2">
-                    {{ range $doubanMovies.wishing }}
-                    {{ partial "douban/movie/movieWish" . }}
-                    {{ end }}
-                    {{ partial "douban/pagination"}}
-                </div>
-                <div id="hexo-douban-item3">
-                    {{ range $doubanMovies.watched }}
-                    {{ partial "douban/movie/movieWatched" . }}
-                    {{ end }}
-                    {{ partial "douban/pagination"}}
-                </div>
-            </div>
-        </div>
-
-        <script src="/hugo-douban/scripts/index.js"></script>
-        <script src="/hugo-douban/scripts/pagination.js" type="text/javascript"></script>
+    </div>
 </section>
 
 {{ end }}
