--- a/themes/hugo-tania/layouts/partials/series/index.html
+++ b/themes/hugo-tania/layouts/partials/series/index.html
@@ -1,6 +1,6 @@
-<section>
+﻿<section>
     <h2>
-        专栏
+        🧭专栏
     </h2>
     <div class="swiper-container">
         <div class="swiper-wrapper">
