优化豆瓣插件

--- a/themes/hugo-theme-stack/assets/scss/partials/extends/douban.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/extends/douban.scss
@@ -1,3 +1,9 @@
+.hexo-douban-container  {
+    background-color: var(--card-background);
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--shadow-l1);
+    padding: var(--card-padding);
+}
 
 .hexo-douban-tabs {
     margin-bottom: 15px;
