--- a/themes/hugo-theme-stack/layouts/page/books.html
+++ b/themes/hugo-theme-stack/layouts/page/books.html
@@ -9,7 +9,7 @@
 
 <section>
     {{ $doubanBooks := $.Site.Data.douban.books }}
-    <div class="container">
+    <div class="hexo-douban-container">
         <div class="hexo-douban-tabs">
             <a class="hexo-douban-tab" id="hexo-douban-tab1" href="javascript:;" rel="external">
                 在读({{ len $doubanBooks.reading }})
