--- a/themes/hugo-theme-stack/layouts/page/movies.html
+++ b/themes/hugo-theme-stack/layouts/page/movies.html
@@ -9,11 +9,14 @@
 
 <section>
     {{ $doubanMovies := $.Site.Data.douban.movies }}
-    <div class="container">
+    <div class="hexo-douban-container">
         <div class="hexo-douban-tabs">
-            <a class="hexo-douban-tab" id="hexo-douban-tab1" href="javascript:;" rel="external">在看({{ len $doubanMovies.watching }})</a>
-            <a class="hexo-douban-tab" id="hexo-douban-tab2" href="javascript:;" rel="external">想看({{ len $doubanMovies.wishing }})</a>
-            <a class="hexo-douban-tab" id="hexo-douban-tab3" href="javascript:;" rel="external">已看({{ len $doubanMovies.watched }})</a>
+            <a class="hexo-douban-tab" id="hexo-douban-tab1" href="javascript:;" rel="external">在看({{ len
+                $doubanMovies.watching }})</a>
+            <a class="hexo-douban-tab" id="hexo-douban-tab2" href="javascript:;" rel="external">想看({{ len
+                $doubanMovies.wishing }})</a>
+            <a class="hexo-douban-tab" id="hexo-douban-tab3" href="javascript:;" rel="external">已看({{ len
+                $doubanMovies.watched }})</a>
         </div>
         <div>
             <div>
@@ -40,6 +43,7 @@
 
         <script src="/hugo-douban/scripts/index.js"></script>
         <script src="/hugo-douban/scripts/pagination.js" type="text/javascript"></script>
+    </div>
 </section>
 
 {{ partialCached "footer/footer" . }}
@@ -47,5 +51,5 @@
 {{ end }}
 
 {{ define "right-sidebar" }}
-    {{ partialCached "sidebar/right.html" . }}
+{{ partialCached "sidebar/right.html" . }}
 {{ end }}
