--- a/themes/hugo-theme-stack/layouts/_default/single.html
+++ b/themes/hugo-theme-stack/layouts/_default/single.html
@@ -1,15 +1,11 @@
 {{ define "body-class" }}
     {{ $TOCEnabled := default (default false .Site.Params.article.toc) .Params.toc }}
     {{- .Scratch.Set "hasTOC" (and (ge (len .TableOfContents) 100) $TOCEnabled) -}}
-    article-page {{ if (.Scratch.Get "hasTOC") }}has-toc{{ end }}
+    article-page
 {{ end }}
 
 {{ define "container-class" }}
-    {{ if (.Scratch.Get "hasTOC") }}
-        extended
-    {{ else }}
-        on-phone--column {{ if .Site.Params.widgets.enabled }}extended{{ else }}compact{{ end }}
-    {{ end }}
+    on-phone--column {{ if .Site.Params.widgets.enabled }}extended{{ else }}compact{{ end }}
 {{ end }}
 
 {{ define "main" }}
@@ -31,34 +27,16 @@
 {{ end }}
 
 {{ define "left-sidebar" }}
-    {{ if (.Scratch.Get "hasTOC") }}
-        <div id="article-toolbar">
-            <a href="{{ .Site.BaseURL | relLangURL }}" class="back-home">
-                {{ (resources.Get "icons/back.svg").Content | safeHTML }}
-                <span>{{ T "article.back" }}</span>
-            </a>
-        </div>
-    {{ else }}
-        {{ partial "sidebar/left.html" . }}
-    {{ end }}
+    <div id="article-toolbar">
+        <a href="{{ .Site.BaseURL | relLangURL }}" class="back-home">
+            {{ (resources.Get "icons/back.svg").Content | safeHTML }}
+            <span>{{ T "article.back" }}</span>
+        </a>
+    </div>
+    {{ partial "sidebar/left.html" . }}
 {{ end }}
 
 {{ define "right-sidebar" }}
-    {{ if (.Scratch.Get "hasTOC") }}
-        <aside class="sidebar right-sidebar sticky">
-            <section class="widget archives">
-                {{ if .Site.Params.widgets.toc.showIcon }}
-                <div class="widget-icon">
-                    {{ partial "helper/icon" "hash" }}
-                </div>
-                {{ end }}
-                <h2 class="widget-title section-title">{{ T "article.tableOfContents" }}</h2>
-                
-                <div class="widget--toc">
-                    {{ .TableOfContents }}
-                </div>
-            </section>
-        </aside>
-    {{ end }}
+    {{ partial "sidebar/right.html" . }}
 {{ end }}
 
