图片懒加载

--- a/themes/hugo-theme-stack/layouts/shortcodes/douban.html
+++ b/themes/hugo-theme-stack/layouts/shortcodes/douban.html
@@ -24,7 +24,7 @@
             </section>
         </div>
     </div>
-    <img class="post-preview--image" src="<%= model.cover %>">
+    <img class="post-preview--image" src="<%= model.cover %>" loading="lazy">
 </div>
 <style>
     .post-preview {
