缓存左侧栏

--- a/themes/hugo-theme-stack/layouts/_default/single.html
+++ b/themes/hugo-theme-stack/layouts/_default/single.html
@@ -33,7 +33,7 @@
             <span>{{ T "article.back" }}</span>
         </a>
     </div>
-    {{ partial "sidebar/left.html" . }}
+    {{ partialCached "sidebar/left.html" . }}
 {{ end }}
 
 {{ define "right-sidebar" }}
