--- a/themes/hugo-theme-stack/layouts/partials/head/style.html
+++ b/themes/hugo-theme-stack/layouts/partials/head/style.html
@@ -1,3 +1,8 @@
 {{ $sass := resources.Get "scss/style.scss" }}
 {{ $style := $sass | resources.ToCSS | minify | resources.Fingerprint "sha256" }}
+{{ $jsdelivr := .Site.Params.jsdelivr }}
+{{ if and $jsdelivr $jsdelivr.enable }}
+<link rel="stylesheet" href="//{{ $jsdelivr.baseUrl }}/gh/{{ $jsdelivr.gh_user }}/{{ $jsdelivr.gh_repo }}@master{{ $style.RelPermalink }}">
+{{ else }}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}">
+{{ end }}
