--- a/themes/hugo-theme-stack/layouts/partials/head/head.html
+++ b/themes/hugo-theme-stack/layouts/partials/head/head.html
@@ -21,5 +21,7 @@
     <link rel="shortcut icon" href="{{ . }}" />
 {{ end }}
 
+{{- partial "head/siteValidation.html" . -}}
+
 {{- template "_internal/google_analytics.html" . -}}
 {{- partial "head/custom.html" . -}}
