--- a/themes/hugo-theme-stack/layouts/partials/head/head.html
+++ b/themes/hugo-theme-stack/layouts/partials/head/head.html
@@ -1,4 +1,5 @@
 <meta charset='utf-8'>
+<meta name="referrer" content="no-referrer"/>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 
 {{- $description := partialCached "data/description" . .RelPermalink -}}
