--- a/themes/hugo-theme-stack/layouts/partials/article/components/footer.html
+++ b/themes/hugo-theme-stack/layouts/partials/article/components/footer.html
@@ -1,6 +1,7 @@
 <footer class="article-footer">
     {{ partial "article/components/tags" . }}
 
+    {{ partial "article/components/share" . }}
     {{ if and (.Site.Params.article.license.enabled) (not (eq .Params.license false)) }}
     <section class="article-copyright">
         {{ partial "helper/icon" "copyright" }}
