--- a/themes/hugo-theme-stack/assets/scss/variables.scss
+++ b/themes/hugo-theme-stack/assets/scss/variables.scss
@@ -75,7 +75,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
     --card-text-color-tertiary: #bababa;
     --card-separator-color: rgba(218, 218, 218, 0.5);
 
-    --card-border-radius: 0px;
+    --card-border-radius: .5rem;
 
     --card-padding: 20px;
 
