--- a/themes/hugo-theme-stack/assets/scss/variables.scss
+++ b/themes/hugo-theme-stack/assets/scss/variables.scss
@@ -26,12 +26,12 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --main-top-padding: 50px;
     }
 
-    --body-background: #f7fbff;
+    --body-background: #f5f5f5;
 
     --accent-color: #34495e;
     --accent-color-darker: #2c3e50;
     --accent-color-text: #fff;
-    --body-text-color: #bababa;
+    --body-text-color: rgba(63,63,70,1);
 
     --tag-border-radius: 4px;
 
