--- a/themes/hugo-theme-stack/layouts/_default/archives.html
+++ b/themes/hugo-theme-stack/layouts/_default/archives.html
@@ -37,3 +37,8 @@
 
     {{ partialCached "footer/footer" . }}
 {{ end }}
+
+{{ define "right-sidebar" }}
+    {{ partial "sidebar/right.html" . }}
+{{ end }}
+
