--- a/themes/hugo-theme-stack/layouts/partials/widget/tag-cloud.html
+++ b/themes/hugo-theme-stack/layouts/partials/widget/tag-cloud.html
@@ -9,7 +9,7 @@
     <div class="tagCloud-tags">
         {{ range first .Site.Params.widgets.tagCloud.limit (shuffle .Site.Taxonomies.tags.ByCount) }}
             <a href="{{ .Page.RelPermalink }}" class="font_size_{{ .Count }}">
-                {{ .Page.Title }}
+                #{{ .Page.Title }}
             </a>
         {{ end }}
 
