--- a/themes/hugo-theme-stack/layouts/partials/article-list/compact.html
+++ b/themes/hugo-theme-stack/layouts/partials/article-list/compact.html
@@ -8,6 +8,18 @@
                 <time datetime='{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}'>
                     {{- .Date.Format (or .Site.Params.dateFormat.published "Jan 02, 2006") -}}
                 </time>
+                <div class="categories">
+                {{ range (.GetTerms "categories") }}
+                <a href="{{ .RelPermalink }}">
+                    {{ .LinkTitle }}
+                </a>
+                {{ end }}
+                </div>
+                <div class="tags">
+                {{ range (.GetTerms "tags") }}
+                <a href="{{ .RelPermalink }}">#{{ .LinkTitle }}</a>
+                {{ end }}
+                </div>
             </footer>
         </div>
 
