--- a/themes/hugo-theme-stack/assets/scss/variables.scss
+++ b/themes/hugo-theme-stack/assets/scss/variables.scss
@@ -55,11 +55,15 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 *   Global font family
 */
 :root {
+
+    --font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-serif: "Volkhov", Georgia, Times, serif;
+    --font-family-monospace: "Lucida Console", Monaco, monospace;
+
     --sys-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Droid Sans", "Helvetica Neue";
     --zh-font-family: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
 
-    --base-font-family: "Lato", var(--sys-font-family), var(--zh-font-family), sans-serif;
-
+    --base-font-family: var(--font-family-sans-serif);
     --code-font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
