--- a/themes/hugo-theme-stack/assets/scss/partials/article.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/article.scss
@@ -25,7 +25,7 @@
             img {
                 width: 100%;
                 height: 150px;
-                object-fit: cover;
+                object-fit: scale-down;
 
                 @include respond(md) {
                     height: 200px;
