--- a/themes/hugo-theme-stack/assets/scss/partials/article.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/article.scss
@@ -22,6 +22,13 @@
         }
 
         .article-image {
+            margin-left: auto; 
+            margin-right: 30px;
+            align-items: center; 
+            @media screen and (max-width: 480px) {
+                display: none;
+            }
+
             img {
                 width: 100%;
                 height: 150px;
