--- a/themes/hugo-theme-stack/assets/scss/partials/layout/article.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/layout/article.scss
@@ -61,8 +61,12 @@
                 svg {
                     width: 20px;
                     height: 20px;
-                    margin-right: 15px;
+                    margin-right: 7.5px;
                     stroke-width: 1.33;
+                }
+
+                span {
+                    margin-right: 15px;
                 }
             }
 
@@ -73,6 +77,12 @@
 
             .article-copyright,
             .article-lastmod {
+                a {
+                    color: var(--body-text-color);
+                }
+            }
+
+            .article-footer-notes {
                 a {
                     color: var(--body-text-color);
                 }
