--- a/themes/hugo-theme-stack/layouts/partials/article/components/footer.html
+++ b/themes/hugo-theme-stack/layouts/partials/article/components/footer.html
@@ -2,19 +2,21 @@
     {{ partial "article/components/tags" . }}
 
     {{ partial "article/components/share" . }}
-    {{ if and (.Site.Params.article.license.enabled) (not (eq .Params.license false)) }}
-    <section class="article-copyright">
-        {{ partial "helper/icon" "copyright" }}
-        <span>{{ default .Site.Params.article.license.default .Params.license | markdownify }}</span>
-    </section>
-    {{ end }}
+    
+    <section class="article-footer-notes">
 
-    {{- if ne .Lastmod .Date -}}
-    <section class="article-lastmod">
+        {{ if and (.Site.Params.article.license.enabled) (not (eq .Params.license false)) }}
+        {{ partial "helper/icon" "copyright" }}
+        <span>
+            {{ default .Site.Params.article.license.default .Params.license | markdownify }}
+        </span>
+        {{ end }}
+
+        {{ if ne .Lastmod .Date }}
         {{ partial "helper/icon" "clock" }}
         <span>
             {{ T "article.lastUpdatedOn" }} {{ .Lastmod.Format ( or .Site.Params.dateFormat.lastUpdated "Jan 02, 2006 15:04 MST" ) }}
         </span>
+        {{ end }}
     </section>
-    {{- end -}}
 </footer>
