--- a/themes/hugo-theme-stack/assets/scss/style.scss
+++ b/themes/hugo-theme-stack/assets/scss/style.scss
@@ -26,6 +26,7 @@
 @import "partials/layout/search.scss";
 @import "partials/extends/douban.scss";
 @import "partials/extends/works.scss";
+@import "partials/extends/reward.scss";
 
 @import "custom.scss";
 
