--- a/themes/hugo-theme-stack/layouts/partials/article/components/footer.html
+++ b/themes/hugo-theme-stack/layouts/partials/article/components/footer.html
@@ -1,4 +1,7 @@
 <footer class="article-footer">
+
+    {{ partial "article/components/reward" . }}
+
     {{ partial "article/components/tags" . }}
 
     {{ partial "article/components/share" . }}
