--- a/themes/hugo-theme-stack/layouts/partials/article-list/components/details.html
+++ b/themes/hugo-theme-stack/layouts/partials/article-list/components/details.html
@@ -44,6 +44,7 @@
     </footer>
     {{ end }}
 </div>
+{{- $publicCDN := cond .Page.Site.IsServer "" .Page.Site.Params.publicCDN -}}
 {{- $image := partialCached "helper/image" (dict "Context" . "Type" "article") .RelPermalink "article" -}}
 {{ if $image.exists }}
 <div class="article-image">
@@ -63,10 +64,13 @@
         {{- $Height = $thumbnail.Height -}}
         {{- end -}}
 
+
         <img src="{{ $Permalink }}" {{ with $Srcset }}srcset="{{ . }}" {{ end }} width="{{ $Width }}"
             height="{{ $Height }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
         {{ else }}
-        <img src="{{ $image.permalink }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
+        {{- $isInternal := eq (slicestr $image.permalink 0 1) "/" -}}
+        {{- $cdnURL := cond $isInternal (print $publicCDN $image.permalink) ($image.permalink) -}}
+        <img src="{{ $cdnURL }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
         {{ end }}
     </a>
 </div>
