--- a/themes/hugo-theme-stack/layouts/partials/article/components/header.html
+++ b/themes/hugo-theme-stack/layouts/partials/article/components/header.html
@@ -1,4 +1,5 @@
 <header class="article-header">
+    {{- $publicCDN := cond .Page.Site.IsServer "" .Page.Site.Params.publicCDN -}}
     {{- $image := partialCached "helper/image" (dict "Context" . "Type" "article") .RelPermalink "article" -}}
     {{ if $image.exists }}
         <div class="article-image">
@@ -25,7 +26,9 @@
                         loading="lazy"
                         alt="Featured image of post {{ .Title }}" />
                 {{ else }}
-                    <img src="{{ $image.permalink }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
+                {{- $isInternal := eq (slicestr $image.permalink 0 1) "/" -}}
+                {{- $cdnURL := cond $isInternal (print $publicCDN $image.permalink) ($image.permalink) -}}
+                    <img src="{{ $cdnURL }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
                 {{ end }}
             </a>
         </div>
