--- a/themes/hugo-theme-stack/layouts/partials/article-list/components/details.html
+++ b/themes/hugo-theme-stack/layouts/partials/article-list/components/details.html
@@ -44,7 +44,7 @@
     </footer>
     {{ end }}
 </div>
-{{- $publicCDN := cond .Page.Site.IsServer "" .Page.Site.Params.publicCDN -}}
+{{- $publicCDN := .Page.Site.Params.publicCDN -}}
 {{- $image := partialCached "helper/image" (dict "Context" . "Type" "article") .RelPermalink "article" -}}
 {{- $loadingImage := print ("/imgs/loading.gif" | relURL) -}}
 {{ if $image.exists }}
@@ -70,8 +70,8 @@
             height="{{ $Height }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
         {{ else }}
         {{- $isInternal := eq (slicestr $image.permalink 0 1) "/" -}}
-        {{- $cdnURL := cond $isInternal (print $publicCDN $image.permalink) ($image.permalink) -}}
-        <img src="{{ $loadingImage }}"  data-src="{{ $cdnURL}}" loading="lazy" alt="Featured image of post {{ .Title }}" />
+        {{- $cdnURL := cond $isInternal (print $publicCDN $image.permalink | safeURL) ($image.permalink | safeURL) -}}
+        <img src="{{ $loadingImage }}"  data-src="{{ $cdnURL | safeURL }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
         {{ end }}
     </a>
 </div>
