--- a/themes/hugo-theme-stack/layouts/partials/article/components/header.html
+++ b/themes/hugo-theme-stack/layouts/partials/article/components/header.html
@@ -1,6 +1,7 @@
 <header class="article-header">
     {{- $publicCDN := cond .Page.Site.IsServer "" .Page.Site.Params.publicCDN -}}
     {{- $image := partialCached "helper/image" (dict "Context" . "Type" "article") .RelPermalink "article" -}}
+    {{- $loadingImage := print ("/imgs/loading.gif" | relURL) -}}
     {{ if $image.exists }}
         <div class="article-image">
             <a href="{{ .RelPermalink }}">
@@ -27,8 +28,9 @@
                         alt="Featured image of post {{ .Title }}" />
                 {{ else }}
                 {{- $isInternal := eq (slicestr $image.permalink 0 1) "/" -}}
-                {{- $cdnURL := cond $isInternal (print $publicCDN $image.permalink) ($image.permalink) -}}
-                    <img src="{{ $cdnURL }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
+                {{- $enableCDN := .Site.Params.jsdelivr.enable -}}
+                {{- $cdnURL := cond (and $enableCDN $isInternal) (print $publicCDN $image.permalink) ($image.permalink) -}}
+                    <img src="{{ $cdnURL | safeURL}}" loading="lazy" alt="Featured image of post {{ .Title }}" />
                 {{ end }}
             </a>
         </div>
