增加 vConsole 调试配置

--- a/themes/hugo-theme-stack/layouts/partials/footer/custom.html
+++ b/themes/hugo-theme-stack/layouts/partials/footer/custom.html
@@ -2,8 +2,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/js/social-share.min.js"></script>
 {{ end }}
+{{ if .Site.Params.debugger.enable }}
 <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
 <script>
   // VConsole will be exported to `window.VConsole` by default.
   var vConsole = new window.VConsole();
 </script>
+{{ end }}
