希望这次没问题

--- a/themes/hugo-theme-stack/layouts/_default/_markup/render-image.html
+++ b/themes/hugo-theme-stack/layouts/_default/_markup/render-image.html
@@ -28,7 +28,7 @@
 	{{- end -}}
 {{- else -}}
 {{- $enableCDN := .Page.Site.Params.jsdelivr.enable -}}
-{{- $Permalink := cond $enableCDN (print $publicCDN $Permalink) $Permalink -}}
+{{- $Permalink := cond $enableCDN (print $publicCDN $Permalink | safeURL) ($Permalink | safeURL) -}}
 {{- end -}}
 
 <figure 
