优化社交网络链接

--- a/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
+++ b/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
@@ -40,6 +40,7 @@
                     <li>
                         <a 
                             href='{{ .URL | relLangURL }}'
+                            rel="noreferrer"
                             {{ if eq (default true .Params.newTab) true }}target="_blank"{{ end }}
                             {{ with .Name }}title="{{ . }}"{{ end }}
                         >
