懒加载回滚

--- a/themes/hugo-theme-stack/layouts/partials/article-list/components/details.html
+++ b/themes/hugo-theme-stack/layouts/partials/article-list/components/details.html
@@ -44,6 +44,7 @@
     </footer>
     {{ end }}
 </div>
+{{- $publicCDN := cond .Page.Site.IsServer "" .Page.Site.Params.publicCDN -}}
 {{- $publicCDN := .Page.Site.Params.publicCDN -}}
 {{- $image := partialCached "helper/image" (dict "Context" . "Type" "article") .RelPermalink "article" -}}
 {{- $loadingImage := print ("/imgs/loading.gif" | relURL) -}}
@@ -72,7 +73,7 @@
         {{- $isInternal := eq (slicestr $image.permalink 0 1) "/" -}}
         {{- $enableCDN := .Site.Params.jsdelivr.enable }}
         {{- $cdnURL := cond (and $isInternal $enableCDN) (print $publicCDN $image.permalink | safeURL) ($image.permalink | safeURL) -}}
-        <img src="{{ $loadingImage }}"  data-src="{{ $cdnURL | safeURL }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
+        <img src="{{ $cdnURL | safeURL }}"  data-src="{{ $cdnURL | safeURL }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
         {{ end }}
     </a>
 </div>
