--- a/themes/hugo-theme-stack/layouts/partials/article-list/components/details.html
+++ b/themes/hugo-theme-stack/layouts/partials/article-list/components/details.html
@@ -72,7 +72,7 @@
         {{- $isInternal := eq (slicestr $image.permalink 0 1) "/" -}}
         {{- $enableCDN := .Site.Params.jsdelivr.enable }}
         {{- $cdnURL := cond (and $isInternal $enableCDN) (print $publicCDN $image.permalink | safeURL) ($image.permalink | safeURL) -}}
-        <img src="{{ $cdnURL | safeURL }}"  data-src="{{ $cdnURL | safeURL }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
+        <img src="{{ $loadingImage }}" data-src="{{ $cdnURL }}" loading="lazy" alt="Featured image of post {{ .Title }}" />
         {{ end }}
     </a>
 </div>
